# Zotero-MCP

./: .env.example  CONTRIBUTING.md  Dockerfile  README.md  Tasks.md  agents.md  docker-entrypoint.sh  problems.md  pyproject.toml  sitecustomize.py
registry/: description.md  metadata.json  submission_guide.md  usage.md
scripts/: smoke_test.py
src/zotero_mcp/: __init__.py  __main__.py  logging_utils.py  server.py  zotero_client.py
tests/: test_integration_mocked.py  test_search_helpers.py  test_tool_schemas.py  test_validation.py
